fix(ZNTA-2473) add spacing between editor sidebar headings and icons

--- a/server/zanata-frontend/src/app/editor/containers/Sidebar/index.css
+++ b/server/zanata-frontend/src/app/editor/containers/Sidebar/index.css
@@ -559,6 +559,10 @@ img.ActivityAvatar {
   font-weight: 500;
 }
 
+.sidebar-editor .hide-md {
+  padding-left: 0.375rem;
+}
+
 h2.SettingsHeading {
   padding-bottom:1rem;
 }
